src/test/deca/syntax/valid/decla_fields.deca
// Description:
//    on déclare des champs au sein d'une classe
//
// Resultats:
//   ok

class A {
	int a;
	float b;
	protected int c;

	
}

