src/test/deca/syntax/invalid/mauvaise_visibility.deca
// Description:
//    mauvaise visibility d'un champ
//
// Resultats:
//   

class A {
	float int a
	float b;
	
}